--- a/data/Drug_Induced_Liver_Injury/meta.yaml
+++ b/data/Drug_Induced_Liver_Injury/meta.yaml
@@ -10,10 +10,14 @@ targets:
   units: liver_injury
   type: categorical
   names:
+  - DILI
   - liver injury
   - Drug Induced Liver Injury
   - fatal liver disease caused by drugs
   - liver toxicity
+  uris:
+  - https://bioportal.bioontology.org/ontologies/MEDDRA?p=classes&conceptid=http%3A%2F%2Fpurl.bioontology.org%2Fontology%2FMEDDRA%2F10072268
+  - https://bioportal.bioontology.org/ontologies/NCIT?p=classes&conceptid=http%3A%2F%2Fncicb.nci.nih.gov%2Fxml%2Fowl%2FEVS%2FThesaurus.owl%23C84427
 identifiers:
 - id: SMILES
   type: SMILES
@@ -22,8 +26,9 @@ license: CC BY 4.0
 links:
 - url: https://doi.org/10.1021/acs.jcim.5b00238
   description: corresponding publication
+- url: https://tdcommons.ai/single_pred_tasks/tox/#dili-drug-induced-liver-injury
+  description: Data source
 num_points: 475
-url: https://tdcommons.ai/single_pred_tasks/tox/#dili-drug-induced-liver-injury
 bibtex:
 - |-
   @article{Xu2015,
