--- a/data/tyrosyl-dna_phosphodiesterase_butkiewicz/meta.yaml
+++ b/data/tyrosyl-dna_phosphodiesterase_butkiewicz/meta.yaml
@@ -1,23 +1,20 @@
 ---
 name: tyrosyl-dna_phosphodiesterase_butkiewicz
-description: 'These are nine high-quality high-throughput screening (HTS) datasets from [1]. These datasets were curated from HTS data at the PubChem database
-    [2]. Typically, HTS categorizes small molecules into hit, inactive, or unspecified against a certain therapeutic target. However, a compound may be
-    falsely classified as a hit due to experimental artifacts such as optical interference. Moreover, because the screening is performed without duplicates,
-    and the cutoff is often set loose to minimize the false negative rates, the results from the primary screens often contain high false positive rates
-    [3]. Hence the result from the primary screen is only used as the first iteration to reduce the compound library to a smaller set of further confirmatory
-    tests. Here each dataset is carefully collated through confirmation screens to validate active compounds. The curation process is documented in [1].
-    Each dataset is identified by the PubChem Assay ID (AID). Features of the datasets: (1) At least 150 confirmed active compounds present; (2) Diverse
-    target classes; (3) Realistic (large number and highly imbalanced label).'
+description: "Inhibition of Human tyrosyl-DNA phosphodiesterase 1 (TDP1)             potentially enhances anticancer activity of DNA topoisomerase I inhibitors.\n\
+    \            Primary screen AID 485290. Counter screen AID 489007.            Final set contains all compounds active in the counter screen AID 489007.\n\
+    \            "
 targets:
     - id: activity_tyrosyl_dna_phosphodiesterase
       description: whether it active against tyrosyl-dna phosphodiesterase receptor (1) or not (0).
-      units: activity
-      type: categorical
+      units:
+      type: boolean
       names:
-          - tyrosyl-dna phosphodiesterase activity
-          - tyrosyl-dna phosphodiesterase Inhibitor
-          - activity against tyrosyl-dna phosphodiesterase
-          - tyrosyl-dna phosphodiesterase receptor
+          - inhibiting human tyrosyl-DNA phosphodiesterase 1 (TDP1)
+          - a tyrosyl-DNA phosphodiesterase 1 (TDP1) inhibitor
+      pubchem_aids:
+          - 485290
+          - 489007
+      uris: []
 identifiers:
     - id: SMILES
       type: SMILES
@@ -30,6 +27,10 @@ links:
       description: corresponding publication
     - url: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/
       description: corresponding publication
+benchmarks:
+    - name: TDC
+      link: https://tdcommons.ai/
+      split_column: split
 num_points: 341365
 url: https://tdcommons.ai/single_pred_tasks/hts/#butkiewicz-et-al
 bibtex:
@@ -43,8 +44,8 @@ bibtex:
                     volume = {18},
                     number = {1},
                     pages = {735--756},
-                    author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller and Jeffrey Mendenhall and Pedro Teixeira and C. Weaver and Jens Meiler},
-                    title = {Benchmarking Ligand-Based Virtual High-Throughput Screening with the {PubChem} Database},
+                    author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller               and Jeffrey Mendenhall and Pedro Teixeira and C. Weaver and Jens Meiler},
+                    title = {Benchmarking Ligand-Based Virtual High-Throughput Screening                 with the {PubChem} Database},
                     journal = {Molecules}}
     - |-
       @article{Kim2018,
@@ -56,7 +57,7 @@ bibtex:
                     volume = {47},
                     number = {D1},
                     pages = {D1102--D1109},
-                    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte and Jia He and Siqian He and Qingliang Li and Benjamin A Shoemaker and Paul A Thiessen and Bo Yu and Leonid Zaslavsky and Jian Zhang and Evan E Bolton},
+                    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte                 and Jia He and Siqian He and Qingliang Li and Benjamin A Shoemaker                     and Paul A Thiessen and Bo Yu and Leonid Zaslavsky and Jian Zhang and Evan E Bolton},
                     title = {{PubChem} 2019 update: improved access to chemical data},
                     journal = {Nucleic Acids Research}}
     - |-
@@ -67,6 +68,6 @@ bibtex:
                     publisher = {Chem Inform},
                     volume = {3},
                     number = {1},
-                    author = {Butkiewicz, M.  and Wang, Y.  and Bryant, S. H.  and Lowe, E. W.  and Weaver, D. C.  and Meiler, J.},
-                    title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets from the {P}ub{C}hem {D}atabase}},
+                    author = {Butkiewicz, M.  and Wang, Y.  and Bryant, S. H.                  and Lowe, E. W.  and Weaver, D. C.  and Meiler, J.},
+                    title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets                 from the {P}ub{C}hem {D}atabase}},
                     journal = {Chemical Science}}
