feat: add name field for other targets

--- a/data/drug_target_interaction/meta.yaml
+++ b/data/drug_target_interaction/meta.yaml
@@ -26,9 +26,13 @@ identifiers:
       description: small-molecule
     - id: target_name
       type: Other
-      description: target name
+      names:
+          - target name
+      description: target amino acid name
     - id: target_aa
       type: Other
+      names:
+          - target amino acid sequence
       description: target amino acid sequence
 license: CC BY 4.0
 links:
