--- a/data/ChEMBL_V29/meta.yaml
+++ b/data/ChEMBL_V29/meta.yaml
@@ -1,41 +1,31 @@
+---
 name: ChEMBL_V29
-description: "\n        ChEMBL is a manually curated database of bioactive molecules\
-  \ with drug-like properties.\n        It brings together chemical, bioactivity and\
-  \ genomic data \n        to aid the translation of genomic information into effective\
-  \ new drugs.   \n        "
+description: "\n        ChEMBL is a manually curated database of bioactive molecules with drug-like properties.\n        It brings together chemical, bioactivity\
+    \ and genomic data \n        to aid the translation of genomic information into effective new drugs. "
 benchmarks:
-- name: TDC
-  link: https://tdcommons.ai/
-  split_column: split
+    - name: TDC
+      link: https://tdcommons.ai/
+      split_column: split
 identifiers:
-- id: SMILES
-  type: SMILES
-  description: SMILES
+    - id: SMILES
+      type: SMILES
+      description: SMILES
 license: CC BY-SA 3.0
 links:
-- url: https://academic.oup.com/nar/article/47/D1/D930/5162468
-  description: Article about original dataset
-- url: https://academic.oup.com/nar/article/43/W1/W612/2467881
-  description: Exemplary related article shown in tdc's website
+    - url: https://academic.oup.com/nar/article/47/D1/D930/5162468
+      description: Article about original dataset
+    - url: https://academic.oup.com/nar/article/43/W1/W612/2467881
+      description: Exemplary related article shown in tdc's website
 num_points: 2084637
 bibtex:
-- "@article{10.1093/nar/gky1075,\n    author = {Mendez, David and Gaulton, Anna and\
-  \ Bento,\n    A Patr\xEDcia and Chambers, Jon and De\_Veij, Marleen and F\xE9lix,\n\
-  \    Eloy and Magari\xF1os, Mar\xEDa\_Paula and Mosquera,\n    Juan\_F and Mutowo,\
-  \ Prudence and Nowotka, Micha\u0142 and Gordillo-Mara\xF1\xF3n,\n    Mar\xEDa and\
-  \ Hunter, Fiona and Junco, Laura and Mugumbate,\n    Grace and Rodriguez-Lopez,\
-  \ Milagros and Atkinson,\n    Francis and Bosc, Nicolas and Radoux, Chris\_J and\
-  \ Segura-Cabrera,\n    Aldo and Hersey, Anne and Leach, Andrew\_R},\n    title =\
-  \ \"{ChEMBL: towards direct deposition of bioassay data}\",\n    journal = {Nucleic\
-  \ Acids Research},\n    volume = {47},\n    number = {D1},\n    pages = {D930-D940},\n\
-  \    year = {2018},\n    month = {11},\n    abstract = \"{ChEMBL is a large, open-access\
-  \ bioactivity database\n    (https://www.ebi.ac.uk/chembl), previously described\
-  \ in the 2012,\n    2014 and 2017 Nucleic Acids Research Database Issues.\n    In\
-  \ the last two years, several important improvements have been made to the database\
-  \ and are described here.\n    These include more robust capture and representation\
-  \ of assay details;\n    a new data deposition system, allowing updating of data\
-  \ sets and deposition of supplementary data;\n    and a completely redesigned web\
-  \ interface, with enhanced search and filtering capabilities.}\",\n    issn = {0305-1048},\n\
-  \    doi = {10.1093/nar/gky1075},\n    url = {https://doi.org/10.1093/nar/gky1075},\n\
-  \    eprint = {https://academic.oup.com/nar/article-pdf/47/D1/D930/27437436/gky1075.pdf},\n\
-  }\n            "
+    - "@article{10.1093/nar/gky1075,\n    author = {Mendez, David and Gaulton, Anna and Bento,\n    A Patrícia and Chambers, Jon and De Veij, Marleen and\
+      \ Félix,\n    Eloy and Magariños, María Paula and Mosquera,\n    Juan F and Mutowo, Prudence and Nowotka, Michał and Gordillo-Marañón,\n    María\
+      \ and Hunter, Fiona and Junco, Laura and Mugumbate,\n    Grace and Rodriguez-Lopez, Milagros and Atkinson,\n    Francis and Bosc, Nicolas and Radoux,\
+      \ Chris J and Segura-Cabrera,\n    Aldo and Hersey, Anne and Leach, Andrew R},\n    title = \"{ChEMBL: towards direct deposition of bioassay data}\"\
+      ,\n    journal = {Nucleic Acids Research},\n    volume = {47},\n    number = {D1},\n    pages = {D930-D940},\n    year = {2018},\n    month = {11},\n\
+      \    abstract = \"{ChEMBL is a large, open-access bioactivity database\n    (https://www.ebi.ac.uk/chembl), previously described in the 2012,\n  \
+      \  2014 and 2017 Nucleic Acids Research Database Issues.\n    In the last two years, several important improvements have been made to the database\
+      \ and are described here.\n    These include more robust capture and representation of assay details;\n    a new data deposition system, allowing\
+      \ updating of data sets and deposition of supplementary data;\n    and a completely redesigned web interface, with enhanced search and filtering capabilities.}\"\
+      ,\n    issn = {0305-1048},\n    doi = {10.1093/nar/gky1075},\n    url = {https://doi.org/10.1093/nar/gky1075},\n    eprint = {https://academic.oup.com/nar/article-pdf/47/D1/D930/27437436/gky1075.pdf},\n\
+      }\n"
