--- a/data/chembl_29/meta.yaml
+++ b/data/chembl_29/meta.yaml
@@ -1,5 +1,5 @@
 ---
-name: ChEMBL_V29
+name: chembl_29
 description: |-
     ChEMBL is a manually curated database of bioactive molecules with drug-like properties.
     It brings together chemical, bioactivity and genomic data
