--- a/data/plasma_protein_binding_rate_astrazeneca/meta.yaml
+++ b/data/plasma_protein_binding_rate_astrazeneca/meta.yaml
@@ -1,57 +1,51 @@
+---
 name: plasma_protein_binding_rate_astrazeneca
 description: |-
-  The human plasma protein binding rate (PPBR) is expressed as the percentage
-  of a drug bound to plasma proteins in the blood. This rate strongly affect a drug's
-  efficiency of delivery. The less bound a drug is, the more efficiently it can
-  traverse and diffuse to the site of actions. From a ChEMBL assay deposited
-  by AstraZeneca.
+    The human plasma protein binding rate (PPBR) is expressed as the percentage
+    of a drug bound to plasma proteins in the blood. This rate strongly affect a drug's
+    efficiency of delivery. The less bound a drug is, the more efficiently it can
+    traverse and diffuse to the site of actions.
 targets:
-- id: rate_of_PPBR
-  description: The percentage of a drug bound to plasma proteins in the blood
-  units: percentage
-  type: continuous
-  names:
-  - a drug bound to plasma proteins
-  - ADME plasma proteins binding
-  - The percentage of a drug bound to plasma proteins in the blood
-  - drug bound plasma proteins in the blood
-  - drug body interaction
-  - Pharmacokinetics plasma protein binding rate
-  - ability of a drug to bind to bound to plasma proteins in the blood
-  uris:
-  - https://bioportal.bioontology.org/ontologies/IOBC?p=classes&conceptid=http%3A%2F%2Fpurl.jp%2Fbio%2F4%2Fid%2F201306028362680450
-  - https://bioportal.bioontology.org/ontologies/BAO?p=classes&conceptid=http%3A%2F%2Fwww.bioassayontology.org%2Fbao%23BAO_0010135
-  - https://bioportal.bioontology.org/ontologies/MESH?p=classes&conceptid=http%3A%2F%2Fpurl.bioontology.org%2Fontology%2FMESH%2FD010599
+    - id: rate_of_PPBR
+      description: percentage of a drug bound to plasma proteins in the blood
+      units: percentage
+      type: continuous
+      names:
+          - human plasma protein binding rate (PPBR)
+          - human plasma protein binding rate
+          - PPBR
+          - percentage of a drug bound to plasma proteins in the blood
+      uris:
+          - http://purl.jp/bio/4/id/201306028362680450
+          - http://www.bioassayontology.org/bao#BAO_0010135
 identifiers:
-- id: SMILES
-  type: SMILES
-  description: SMILES
-- id: Species
-  type: Other
-  names:
-  - Species
-  - Species that drug measure in
-  description: Species which drug have a percentage bound to plasma proteins in blood
-- id: chembl_id
-  type: Other
-  names:
-  - ChEMBL database id
-  - ChEMBL identifier number
-  description: chembl ids
+    - id: SMILES
+      type: SMILES
+      description: SMILES
+    - id: Species
+      type: Other
+      names: species
+      description: species in which the measurement was carried out
+    - id: chembl_id
+      type: Other
+      names:
+          - ChEMBL id
+          - ChEMBL identifier number
+      description: chembl ids
 license: CC BY 4.0
 links:
-- url: http://dx.doi.org/10.6019/CHEMBL3301361
-  description: corresponding publication
-- url: https://tdcommons.ai/single_pred_tasks/adme/#ppbr-plasma-protein-binding-rate-astrazeneca
-  description: data source
-num_points: 2828
+    - url: http://dx.doi.org/10.6019/CHEMBL3301361
+      description: corresponding publication
+    - url: https://tdcommons.ai/single_pred_tasks/adme/#ppbr-plasma-protein-binding-rate-astrazeneca
+      description: data source
+num_points: 8070
 bibtex:
-- |-
-  @techreport{Hersey2015,
-  doi = {10.6019/chembl3301361},
-  url = {https://doi.org/10.6019/chembl3301361},
-  year = {2015},
-  month = feb,
-  publisher = {EMBL-EBI},
-  author = {Anne Hersey},
-  title = {ChEMBL Deposited Data Set - AZ dataset}
+    - |-
+      @techreport{Hersey2015,
+      doi = {10.6019/chembl3301361},
+      url = {https://doi.org/10.6019/chembl3301361},
+      year = {2015},
+      month = feb,
+      publisher = {EMBL-EBI},
+      author = {Anne Hersey},
+      title = {ChEMBL Deposited Data Set - AZ dataset}
