--- a/data/peptides_hemolytic/meta.yaml
+++ b/data/peptides_hemolytic/meta.yaml
@@ -1,18 +1,17 @@
 ---
 name: peptides_hemolytic
-description: "Hemolysis is referred to the disruption of erythrocyte\n        membranes that decrease the life span of red blood cells and causes\n    \
-    \    the release of Hemoglobin. It is critical to identify non-hemolytic\n        antimicrobial peptides as a non-toxic and safe measure against bacterial\n\
-    \        infections. However, distinguishing between hemolytic and non-hemolytic\n        peptides is a challenge, since they primarily exert their\
-    \ activity at the\n        charged surface of the bacterial plasma membrane.\n        The data here comes from the Database of Antimicrobial Activity\
-    \ and Structure of\n        Peptides (DBAASP v3). Hemolytic activity is defined by extrapolating a measurement\n        assuming dose response curves\
-    \ to the point\n        at which 50% of red blood cells are lysed. Activities below 100 mu g/ml, are\n        considered hemolytic.\n        The data\
-    \ contains sequences of only L- and canonical amino acids. Each measurement\n        is treated independently, so sequences can appear multiple times.\
-    \ This experimental\n        dataset contains noise, and in some observations (40%), an identical sequence appears\n        in both negative and positive\
-    \ class. As an example, sequence \"RVKRVWPLVIRTVIAGYNLYRAIKKK\"\n        is found to be both hemolytic and\n        non-hemolytic in two different lab\
-    \ experiments (i.e. two different training examples). "
+description: "Hemolysis is referred to the disruption of erythrocyte\nmembranes that decrease the life span of red blood cells and causes\nthe release of\
+    \ Hemoglobin. It is critical to identify non-hemolytic\nantimicrobial peptides as a non-toxic and safe measure against bacterial\ninfections. However,\
+    \ distinguishing between hemolytic and non-hemolytic\npeptides is a challenge, since they primarily exert their activity at the\ncharged surface of\
+    \ the bacterial plasma membrane.\nThe data here comes from the Database of Antimicrobial Activity and Structure of\nPeptides (DBAASP v3). Hemolytic\
+    \ activity is defined by extrapolating a measurement\nassuming dose response curves to the point\nat which 50% of red blood cells are lysed. Activities\
+    \ below 100 mu g/ml, are\nconsidered hemolytic.\nThe data contains sequences of only L- and canonical amino acids. Each measurement\nis treated independently,\
+    \ so sequences can appear multiple times. This experimental\ndataset contains noise, and in some observations (40%), an identical sequence appears\n\
+    in both negative and positive class. As an example, sequence \"RVKRVWPLVIRTVIAGYNLYRAIKKK\"\nis found to be both hemolytic and\nnon-hemolytic in two\
+    \ different lab experiments (i.e. two different training examples). "
 targets:
     - id: hemolytic
-      description: The ability of a peptide sequence to lyse red blood cells. (1) or not (0)
+      description: The ability of a peptide sequence to lyse red blood cells (1) or not (0).
       units:
       type: boolean
       names:
@@ -26,39 +25,39 @@ benchmarks: []
 identifiers:
     - id: sequence
       type: Other
-      description: sequence
+      description: amino acid sequence
 license: CC BY 4.0
 links:
     - url: https://doi.org/10.1021/acs.jcim.2c01317
       description: corresponding publication
     - url: https://doi.org/10.1093/nar/gkaa991
-      description: data srouce
+      description: data source
 num_points: 6541
 bibtex:
     - |-
       @article{Martins2012,
-            doi = {10.1021/ci300124c},
-            url = {https://doi.org/10.1021/ci300124c},
-            year = {2012},
-            month = jun,
-            publisher = {American Chemical Society (ACS)},
-            volume = {52},
-            number = {6},
-            pages = {1686--1697},
-            author = {Ines Filipa Martins and Ana L. Teixeira and Luis Pinheiro
-            and Andre O. Falcao},
-            title = {A Bayesian Approach to in Silico Blood-Brain Barrier Penetration Modeling},
-            journal = {Journal of Chemical Information and Modeling}
+      doi = {10.1021/ci300124c},
+      url = {https://doi.org/10.1021/ci300124c},
+      year = {2012},
+      month = jun,
+      publisher = {American Chemical Society (ACS)},
+      volume = {52},
+      number = {6},
+      pages = {1686--1697},
+      author = {Ines Filipa Martins and Ana L. Teixeira and Luis Pinheiro
+      and Andre O. Falcao},
+      title = {A Bayesian Approach to in Silico Blood-Brain Barrier Penetration Modeling},
+      journal = {Journal of Chemical Information and Modeling}
     - |-
       @article{Wu2018,
-            doi = {10.1039/c7sc02664a},
-            url = {https://doi.org/10.1039/c7sc02664a},
-            year = {2018},
-            publisher = {Royal Society of Chemistry (RSC)},
-            volume = {9},
-            number = {2},
-            pages = {513--530},
-            author = {Zhenqin Wu and Bharath Ramsundar and Evan~N. Feinberg and Joseph
-            Gomes and Caleb Geniesse and Aneesh S. Pappu and Karl Leswing and Vijay Pande},
-            title = {MoleculeNet: a benchmark for molecular machine learning},
-            journal = {Chemical Science}
+      doi = {10.1039/c7sc02664a},
+      url = {https://doi.org/10.1039/c7sc02664a},
+      year = {2018},
+      publisher = {Royal Society of Chemistry (RSC)},
+      volume = {9},
+      number = {2},
+      pages = {513--530},
+      author = {Zhenqin Wu and Bharath Ramsundar and Evan~N. Feinberg and Joseph
+      Gomes and Caleb Geniesse and Aneesh S. Pappu and Karl Leswing and Vijay Pande},
+      title = {MoleculeNet: a benchmark for molecular machine learning},
+      journal = {Chemical Science}
