feat: update compound_protein and compound_protein_compound templates

--- a/data/kg/compound_protein_compound/meta.yaml
+++ b/data/kg/compound_protein_compound/meta.yaml
@@ -85,7 +85,7 @@ bibtex:
       url = {https://doi.org/10.1093/nar/gkab543},\n}"
 templates:
     - The {node1_type#} SMILES {node1_smiles#} {rel1_type#} the {node2_type#} {node2_protein_names#} and {rel2_type#} the {node3_type#} {node3_name#}.
-    - The {node2_type#} {node2_protein_names#} is targeted by the drugs SMILES {node1_smiles#} and {node3_name#}.
+    - The {node2_type#} {node2_protein_names#} is targeted by the drug with the SMILES {node1_smiles#} and {node3_name#}.
     - |-
       User: Can you give me an example for a {node1_type#} SMILES that {rel1_type#} the {node2_type#} {node2_protein_names#}?
       Assistant: Yes, The {node1_type#} SMILES {node1_smiles#} {rel1_type#} the {node2_type#} {node2_protein_names#}.
