--- a/data/kg/compound_protein/meta.yaml
+++ b/data/kg/compound_protein/meta.yaml
@@ -55,7 +55,7 @@ bibtex:
       url = {https://doi.org/10.1093/nar/gkab543},\n}"
 templates:
     - The {node1_type#} SMILES {node1_smiles#} {rel1_type#} the {node2_type#} {node2_protein_names#}.
-    - The {node2_type#} {node2_protein_names#} is targeted by the drugs SMILES {node1_smiles#}.
+    - The {node2_type#} {node2_protein_names#} is targeted by the drug with the SMILES {node1_smiles#}.
     - |-
       User: Can you give me an example for a {node1_type#} SMILES that {rel1_type#} the {node2_type#} {node2_protein_names#}?
       Assistant: Yes, The {node1_type#} SMILES {node1_smiles#} {rel1_type#} the {node2_type#} {node2_protein_names#}.
