feat: update templates drug_induced_liver_injury

--- a/data/tabular/drug_induced_liver_injury/meta.yaml
+++ b/data/tabular/drug_induced_liver_injury/meta.yaml
@@ -12,13 +12,10 @@ targets:
       units:
       type: boolean
       names:
-          - noun: liver injury
-          - noun: drug induced liver injury
+          - noun: drug-induced liver injury
+          - noun: drug-induced liver injury (DILI)
           - noun: fatal liver disease caused by drugs
-          - noun: liver toxicity
-          - verb: injures the liver
-          - verb: is toxic to the liver
-          - verb: causes liver injury
+          - verb: causes drug-induced liver injury
       uris:
           - http://purl.bioontology.org/ontology/MEDDRA/10072268
           - http://ncicb.nci.nih.gov/xml/owl/EVS/Thesaurus.owl#C84427
@@ -52,3 +49,81 @@ bibtex:
       and Shuaishi Gao and Jianfeng Pei and Luhua Lai},
       title = {Deep Learning for Drug-Induced Liver Injury},
       journal = {Journal of Chemical Information and Modeling}
+templates:
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|causes|displays!} {liver_injury#no &NULL}{liver_injury__names__noun}.
+    - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule causes {liver_injury#no &NULL}{liver_injury__names__noun}.
+    - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {liver_injury#not &NULL}identified as causing a {liver_injury__names__noun}.
+    - The {#molecule |!}{SMILES__description} {SMILES#} is causing {liver_injury#no &NULL}{liver_injury__names__noun}.
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that {#shows|causes!} {liver_injury__names__noun}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
+      Result: {liver_injury#False&True}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that {#shows|causes!} {liver_injury__names__noun}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Answer the question in a {#full|complete!} sentence.
+      Result: This molecule is {liver_injury#not &NULL}causing {liver_injury__names__noun}.
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: A molecule that {#shows|causes!} {liver_injury__names__noun}.
+      Result: {SMILES#}
+    - |-
+      User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} {#shows|causes!} a {liver_injury__names__noun}?
+      Assistant: {liver_injury#No&Yes}, this molecule is {liver_injury#not &NULL}causing a {liver_injury__names__noun}.
+    - |-
+      User: Is the molecule with the {SMILES__description} {SMILES#} causing a {liver_injury__names__noun}?
+      Assistant: {liver_injury#No&Yes}, it is {liver_injury#not &NULL}causing a {liver_injury__names__noun}.
+    - |-
+      User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {liver_injury#not &NULL}{#showing|causing!} a {liver_injury__names__noun}?
+      Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {SMILES#}
+    - |-
+      User: I'm {#searching|looking!} for the {SMILES__description} of a molecule that is {liver_injury#not &NULL}{#showing|causing!} a {liver_injury__names__noun}.
+      Assistant: This is a molecule that is {liver_injury#not &NULL}causing a {liver_injury__names__noun}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
+      User: Yes, please. The molecule should {liver_injury#not &NULL}be causing a {liver_injury__names__noun}.
+      Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} is {liver_injury#not &NULL}causing a {liver_injury__names__noun}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
+      User: Yes, the molecule should {liver_injury#not &NULL}be causing a {liver_injury__names__noun}.
+      Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {liver_injury#not &NULL}causing a {liver_injury__names__noun}: {SMILES#}
+    - Is the {SMILES__description} {SMILES#} causing a {liver_injury__names__noun}:<EOI> {liver_injury#yes&no}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that {#shows|causes!} a {liver_injury__names__noun}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
+      Result:<EOI> {liver_injury#False&True}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} causing a {liver_injury__names__noun}?
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+      Options:
+      {liver_injury%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} causing a {liver_injury__names__noun}?
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+      Options:
+      {liver_injury%}
+      Answer:<EOI> {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {liver_injury#not &NULL} causing a {liver_injury__names__noun}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%liver_injury%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {liver_injury#not &NULL} causing a {liver_injury__names__noun}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%liver_injury%}
+      Answer:<EOI> {%multiple_choice_result}
