--- a/data/tabular/tyrosyl-dna_phosphodiesterase_butkiewicz/meta.yaml
+++ b/data/tabular/tyrosyl-dna_phosphodiesterase_butkiewicz/meta.yaml
@@ -85,8 +85,9 @@ bibtex:
       from the {P}ub{C}hem {D}atabase}},
       journal = {Chemical Science}}
 templates:
-    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is {activity_tyrosyl_dna_phosphodiesterase#not &NULL}{activity_tyrosyl_dna_phosphodiesterase__names__noun}.The
-      molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {activity_tyrosyl_dna_phosphodiesterase#no &NULL}{activity_tyrosyl_dna_phosphodiesterase__names__gerund}.
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} is {activity_tyrosyl_dna_phosphodiesterase#not &NULL}{activity_tyrosyl_dna_phosphodiesterase__names__noun}.
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {activity_tyrosyl_dna_phosphodiesterase#no
+      &NULL}{activity_tyrosyl_dna_phosphodiesterase__names__gerund}.
     - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule has {activity_tyrosyl_dna_phosphodiesterase#no &NULL}{activity_tyrosyl_dna_phosphodiesterase__names__adjective}
       {#properties|characteristics|features!}.
     - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {activity_tyrosyl_dna_phosphodiesterase#not &NULL}identified as {activity_tyrosyl_dna_phosphodiesterase__names__adjective}.
