--- a/data/tabular/drug_induced_liver_injury/meta.yaml
+++ b/data/tabular/drug_induced_liver_injury/meta.yaml
@@ -92,7 +92,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {liver_injury#not &NULL}be causing a {liver_injury__names__noun}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {liver_injury#not &NULL}causing a {liver_injury__names__noun}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} causing a {liver_injury__names__noun}:<EOI> {liver_injury#yes&no}
+    - Is the {SMILES__description} {SMILES#} causing a {liver_injury__names__noun}:<EOI> {liver_injury#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that {#shows|causes!} a {liver_injury__names__noun}.
