--- a/data/tabular/plasma_protein_binding_rate_astrazeneca/meta.yaml
+++ b/data/tabular/plasma_protein_binding_rate_astrazeneca/meta.yaml
@@ -8,13 +8,12 @@ description: |-
 targets:
     - id: rate_of_PPBR
       description: percentage of a drug bound to plasma proteins in the blood
-      units: percentage
+      units: '%'
       type: continuous
       names:
           - noun: human plasma protein binding rate (PPBR)
           - noun: human plasma protein binding rate
           - noun: PPBR
-          - noun: percentage of a drug bound to plasma proteins in the blood
       uris:
           - http://purl.jp/bio/4/id/201306028362680450
           - http://www.bioassayontology.org/bao#BAO_0010135
