--- a/data/tabular/tyrosyl-dna_phosphodiesterase_butkiewicz/meta.yaml
+++ b/data/tabular/tyrosyl-dna_phosphodiesterase_butkiewicz/meta.yaml
@@ -13,8 +13,8 @@ targets:
       names:
           - noun: a tyrosyl-DNA phosphodiesterase 1 (TDP1) inhibitor
           - noun: an inhibitor of tyrosyl-DNA phosphodiesterase 1
-          - gerund: inhibiting properties of human tyrosyl-DNA phosphodiesterase 1 (TDP1)
-          - gerund: inhibiting of human tyrosyl-DNA phosphodiesterase 1
+          - gerund: inhibiting the human tyrosyl-DNA phosphodiesterase 1 (TDP1)
+          - gerund: inhibiting the human tyrosyl-DNA phosphodiesterase 1
           - adjective: active against the tyrosyl-DNA phosphodiesterase receptor 1
           - adjective: active against the tyrosyl-DNA phosphodiesterase receptor 1 (TDP1)
       pubchem_aids:
@@ -130,7 +130,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {activity_tyrosyl_dna_phosphodiesterase#not &NULL}be {activity_tyrosyl_dna_phosphodiesterase__names__adjective}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {activity_tyrosyl_dna_phosphodiesterase#not &NULL}{activity_tyrosyl_dna_phosphodiesterase__names__adjective}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} {activity_tyrosyl_dna_phosphodiesterase__names__adjective}:<EOI> {activity_tyrosyl_dna_phosphodiesterase#yes&no}
+    - Is the {SMILES__description} {SMILES#} {activity_tyrosyl_dna_phosphodiesterase__names__adjective}:<EOI> {activity_tyrosyl_dna_phosphodiesterase#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {activity_tyrosyl_dna_phosphodiesterase__names__adjective}.
