--- a/data/tabular/peptides_nonfouling/meta.yaml
+++ b/data/tabular/peptides_nonfouling/meta.yaml
@@ -1,11 +1,10 @@
 ---
 name: peptides_nonfouling
-description: "Non-fouling is defined as resistance to non-specific interactions. A non-fouling peptide (positive example) is\
-\ defined using the mechanism proposed in ref.~\cite{white2012decoding}. Briefly,~\citet{white2012decoding}, showed that the\
-\ exterior surfaces of proteins have a significantly different frequency of amino acids, and this increases in aggregation\
-\ prone environments, like the cytoplasm. Synthesizing self-assembling peptides that follow this amino acid distribution\
-\ and coating surfaces with the peptides creates non-fouling surfaces. This pattern was also found inside chaperone proteins,\
-\ another area where resistance to non-specific interactions is important\cite{white2012role}."
+description: Non-fouling is defined as resistance to non-specific interactions. A non-fouling peptide (positive example) is defined using the mechanism
+    proposed in ref white2012decoding. Briefly, white2012decoding, showed that the exterior surfaces of proteins have a significantly different frequency
+    of amino acids, and this increases in aggregation prone environments, like the cytoplasm. Synthesizing self-assembling peptides that follow this amino
+    acid distribution and coating surfaces with the peptides creates non-fouling surfaces. This pattern was also found inside chaperone proteins, another
+    area where resistance to non-specific interactions is important white2012role.
 targets:
     - id: nonfouling
       description: The nonfouling activity of a peptide sequence (1) or not (0).
